--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Danielle Oda Home Page</title>
+
     <link rel="shortcut icon" type="image/png" href="/favicon.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -13,28 +14,20 @@
       href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Sulphur+Point:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <!-- CSS only -->
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="name-home">Danielle Oda</h1>
-    <h4>
-      <ul class="navigation">
-        <span>
-          <li><a href="pages/projects.html">Projects</a></li>
-        </span>
-        <span>
-          <li><a href="pages/about.html">About</a></li>
-        </span>
-        <span>
-          <li><a href="pages/contact.html">Contact</a></li>
-        </span>
-      </ul>
-    </h4>
+    <header class="top-header">
+      <span class="name-header">
+        <h1 class="name-home">Danielle Oda</h1>
+      </span>
+      <span class="page-navigation">
+        <span class="page-link"><a href="pages/projects.html">Work</a></span>
+        <span class="page-link"><a href="pages/about.html">About</a></span>
+        <span class="page-link"><a href="pages/contact.html">Contact</a></span>
+      </span>
+    </header>
   </body>
 </html>
