Added more CSS styling to pages and page directories

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Danielle Oda Home Page</title>
-
     <link rel="shortcut icon" type="image/png" href="/favicon.png" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,18 +13,19 @@
       rel="stylesheet"
     />
     <!-- CSS only -->
-
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="top-header">
       <span class="name-header">
-        <h1 class="name-home">Danielle Oda</h1>
+        <h1 class="name-home"><a href="/">Danielle Oda</a></h1>
       </span>
       <span class="page-navigation">
-        <span class="page-link"><a href="pages/projects.html">Work</a></span>
-        <span class="page-link"><a href="pages/about.html">About</a></span>
-        <span class="page-link"><a href="pages/contact.html">Contact</a></span>
+        <span class="page-link"><a href="../pages/projects.html">Work</a></span>
+        <span class="page-link"><a href="../pages/about.html">About</a></span>
+        <span class="page-link"
+          ><a href="../pages/contact.html">Contact</a></span
+        >
       </span>
     </header>
   </body>
