--- a/pages/about.html
+++ b/pages/about.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Sulphur+Point:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <!-- CSS only -->
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
+    <header class="top-header">
+      <span class="name-header">
+        <h1 class="name-home"><a href="/">Danielle Oda</a></h1>
+      </span>
+      <span class="page-navigation">
+        <span class="page-link"><a href="../pages/projects.html">Work</a></span>
+        <span class="page-link"
+          ><a class="current" href="../pages/about.html">About</a></span
+        >
+        <span class="page-link"
+          ><a href="../pages/contact.html">Contact</a></span
+        >
+      </span>
+    </header>
     <h1>Hello from About</h1>
   </body>
 </html>
