--- a/pages/about.html
+++ b/pages/about.html
@@ -5,27 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Sulphur+Point:wght@300;400&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <!-- CSS only -->
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <header class="top-header">
       <span class="name-header">
-        <h1 class="name-home"><a href="/">Danielle Oda</a></h1>
+        <a href="/">
+          <img src="../img/danielleoda-transparency.png" class="name-home" />
+        </a>
       </span>
+
       <span class="page-navigation">
-        <span class="page-link"><a href="../pages/projects.html">Work</a></span>
-        <span class="page-link"
-          ><a class="current" href="../pages/about.html">About</a></span
+        <span class="page-link border-0"
+          ><a href="../pages/portfolio.html">Portfolio</a></span
         >
-        <span class="page-link"
+        <span class="page-link border-0"
+          ><a href="../pages/about.html" class="current">About</a></span
+        >
+        <span class="page-link border-0"
           ><a href="../pages/contact.html">Contact</a></span
         >
       </span>
