--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Projects</title>
     <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -36,16 +36,16 @@
 
       <span class="page-navigation">
         <span class="page-link border-0"
-          ><a href="../pages/portfolio.html">Portfolio</a></span
+          ><a href="../pages/portfolio.html" class="current">Portfolio</a></span
         >
         <span class="page-link border-0"
           ><a href="../pages/about.html">About</a></span
         >
         <span class="page-link border-0"
-          ><a href="../pages/contact.html" class="current">Contact</a></span
+          ><a href="../pages/contact.html">Contact</a></span
         >
       </span>
     </header>
-    <h1>Hello from Contact</h1>
+    <h1>Hello from projects</h1>
   </body>
 </html>
