Updated CSS styling for UX Projects Page

--- a/pages/about.html
+++ b/pages/about.html
@@ -52,6 +52,74 @@
         </ul>
       </div>
     </nav>
+    <div class="d-flex justify-content-center about-me-all">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <span
+              ><img src="../img/bio-pic.jpg" class="img-fluid bio-pic"
+            /></span>
+          </div>
+          <div class="col-md-6 about-section">
+            <h1 class="about-title mt-4">Hello, I'm Danielle</h1>
+            <p class="about-paragraph mt-3">
+              <em
+                >A UX Designer and Front-End Developer who enjoys creating clean
+                & user-friendly designs and building the code bring those
+                products alive.</em
+              >
+            </p>
+            <p class="about-paragraph-two mt-4">
+              Having spent much of my time in music teaching and music business,
+              I am equipped with strong communication skills, a highly creative
+              eye, and a strong ability to empathize. Within all my prior work
+              experiences, I have learned the importance of listening to
+              clients, understanding their needs and acting upon that knowledge
+              to create my best work. After completing an intense UX Design and
+              Front-End program, I’m excited to continue my journey in
+              empathizing with users and building functional designs solutions
+              that have accessibility needs in mind.
+            </p>
+            <div class="all-buttons">
+              <div>
+                <a href="#" class="resume-button"> Resume </a>
+              </div>
+              <div class="email-section">
+                <span>
+                  <a href="#" class="email-button"
+                    ><img
+                      src="../img/iconmonstr-email-11.svg"
+                      class="email-icon"
+                    />
+                  </a>
+                </span>
+                <span>
+                  <a href="mailto:odadaniellek@gmail.com" class="website-link" target="__blank"
+                    >odadaniellek@gmail.com</a
+                  >
+                </span>
+              </div>
+              <div class="linkedin-section">
+                <span>
+                  <a href="#" class="linkedin-button"
+                    ><img
+                      src="../img/iconmonstr-linkedin-5.svg"
+                      class="linkedin-icon"
+                    />
+                  </a>
+                </span>
+                <span>
+                  <a href="https://www.linkedin.com/in/danielle-oda-492066221/" class="website-link" target="__blank" 
+                    >https://www.linkedin.com/in/danielle-oda-492066221/</a
+                  >
+                </span>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -67,6 +135,5 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
-    <p>Hello from about</p>
   </body>
 </html>
