--- a/projects/ux-one-boutique.html
+++ b/projects/ux-one-boutique.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projects</title>
+    <title>Danielle Oda Home Page</title>
     <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Sulphur+Point:wght@300;400&display=swap"
       rel="stylesheet"
     />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,8 +20,7 @@
       crossorigin="anonymous"
     />
 
-    <!-- CSS only -->
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -38,10 +38,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="../pages/portfolio.html"
-              ><span class="sr-only">Portfolio </span></a
-            >
+          <li class="nav-item">
+            <a class="nav-link active" href="../pages/portfolio.html"
+              >Portfolio <span class="sr-only"></span
+            ></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../pages/about.html">About</a>
@@ -52,38 +52,6 @@
         </ul>
       </div>
     </nav>
-    <div class="projects-category">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-6 image">
-            <a href="../projects/ux-projects.html" class="ux-projects">
-              <img
-                src="../img/carrots-img.png"
-                class="portfolio-img carrots-img img-fluid"
-                alt="Carrots Cooking App"
-              />
-              <div class="image-overlay">
-                <div class="image-title">UX/UI Projects</div>
-              </div>
-            </a>
-          </div>
-          <div class="col-sm-6 image">
-            <a
-              href="../projects/frontend-projects.html"
-              class="frontend-projects"
-            >
-              <img
-                src="../img/dictionary-img.png"
-                class="portfolio-img dictionary-img img-fluid"
-              />
-              <div class="image-overlay-dict">
-                <div class="image-title-dict">Front-End</div>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
