--- a/projects/ux-projects.html
+++ b/projects/ux-projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projects</title>
+    <title>UX Design Projects</title>
     <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Sulphur+Point:wght@300;400&display=swap"
       rel="stylesheet"
     />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,7 +20,6 @@
       crossorigin="anonymous"
     />
 
-    <!-- CSS only -->
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
@@ -52,34 +52,60 @@
         </ul>
       </div>
     </nav>
+
     <div class="projects-category">
       <div class="container">
-        <div class="row">
-          <div class="col-sm-6 image">
-            <a href="../projects/ux-projects.html" class="ux-projects">
-              <img
-                src="../img/carrots-img.png"
-                class="portfolio-img carrots-img img-fluid"
-                alt="Carrots Cooking App"
-              />
-              <div class="image-overlay">
-                <div class="image-title">UX/UI Projects</div>
-              </div>
-            </a>
+        <div class="row g-1 mb-2">
+          <div class="col-sm image">
+            <div class="app-image">
+              <a href="#" class="ux-projects">
+                <img
+                  src="../img/boutiqueapp-mobile.png"
+                  class="ux-img img-fluid"
+                  alt="BoutiqueApp Project"
+                />
+
+                <div class="image-overlay">
+                  <div class="image-title">BoutiqueApp Project</div>
+                </div>
+              </a>
+            </div>
           </div>
-          <div class="col-sm-6 image">
-            <a
-              href="../projects/frontend-projects.html"
-              class="frontend-projects"
-            >
-              <img
-                src="../img/dictionary-img.png"
-                class="portfolio-img dictionary-img img-fluid"
-              />
-              <div class="image-overlay-dict">
-                <div class="image-title-dict">Front-End</div>
-              </div>
-            </a>
+          <div class="col-sm image">
+            <div class="app-image">
+              <a href="#" class="ux-projects" alt="PetConnect Project">
+                <img src="../img/carrots-ipad.png" class="ux-img img-fluid" />
+                <div class="image-overlay">
+                  <div class="image-title-dict">PetConnect Project</div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row g-1">
+          <div class="col-sm image">
+            <div class="app-image">
+              <a
+                href="#"
+                class="ux-projects"
+                alt="Carrots Cooking App for Kids"
+              >
+                <img
+                  src="../img/petconnect-desktop.png"
+                  class="ux-img img-fluid"
+                />
+                <div class="image-overlay">
+                  <div class="image-title-dict">
+                    Carrots Cooking App Project
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm image">
+            <div class="app-image">
+              <img src="../img/white-block-fill.png" class="ux-img img-fluid" />
+            </div>
           </div>
         </div>
       </div>
