Added content and CSS to BoutiqueApp page

--- a/projects/ux-one-boutique.html
+++ b/projects/ux-one-boutique.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Danielle Oda Home Page</title>
+    <title>BoutiqueApp</title>
     <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style-ux.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -52,6 +52,257 @@
         </ul>
       </div>
     </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="title-text">
+            <h3 class="title-info">Case Study:</h3>
+            <h1 class="title-info">BoutiqueApp</h1>
+            <p class="title-info">Checkout App Flow</p>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <img
+            src="../img/boutiqueapp-mobile.png"
+            class="img-fluid title-img"
+          />
+        </div>
+      </div>
+      <div class="project-overview-section">
+        <div class="row">
+          <h2 class="project-overview-title">Project Overview</h2>
+          <div class="col-sm-4">
+            <div class="p-3">
+              <h4>The problem</h4>
+              <p>
+                Busy professionals and individuals who are constantly on-the-go
+                lack time to shop for themselves at the mall
+              </p>
+            </div>
+            <div class="p-3 project-overview-goal">
+              <h4>The goal</h4>
+              <p>
+                Design an app that contains all items that would be carried in
+                stores, with detailed pictures, sizing and modeling that will
+                for confidence in purchasing the right item for an individual.
+              </p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="p-3">
+              <h4>The product</h4>
+              <p>
+                BoutiqueApp is a regional retailer with multiple branches
+                located in the suburbs. They offer all their clothing and
+                accessories modeled by individuals in various sizes and heights
+                so customers get a good idea of how items will fit. BoutiqueApp
+                targets busy professionals who are on-the-go and rely on apps
+                and online ordering to get their purchasing done.
+              </p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="p-3">
+              <h4>My role</h4>
+              <p>
+                UX Designer in charge of BoutiqueApp's design from conception to
+                delivery
+              </p>
+            </div>
+            <div class="p-3">
+              <h4>Responsibilities</h4>
+              <p>
+                Conducting interviews, low-fidelity paper + digital wireframes,
+                high-fidelity prototypes, usability studies, planning for
+                accessibility, and iterating on designs.
+              </p>
+            </div>
+            <div class="p-3">
+              <h4>Project duration</h4>
+              <p>September 2021 - January 2022</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="understand-user-section">
+        <div class="row">
+          <div class="col-sm">
+            <h2 class="understand-user-title">Understanding the user</h2>
+            <p>
+              I planned out questions, conducted interviews and created empathy
+              maps to understand the user’s needs and target a good user flow. A
+              primary user group identified during the research included
+              individuals who lead busy lives (work, school) and don’t have time
+              to spend at the mall. This user group confirmed initial
+              assumptions, but also revealed that individuals were more
+              interested in leisure, outdoor activities and valued family time
+              than spending their time commuting, browsing and physically
+              shopping at the mall. All these factors combined were reasons for
+              individuals to prefer shopping via an app.
+            </p>
+          </div>
+        </div>
+        <div class="pain-points">
+          <div class="row">
+            <h2 class="mb-5">User pain points</h2>
+            <div class="col-sm-4">
+              <h4 class="mb-3 text-center">1. Time</h4>
+              <p class="p-3 text-center">
+                Individuals did not want to spend a large amount of time
+                commuting to stores and browsing them in-person
+              </p>
+            </div>
+            <div class="col-sm-4">
+              <h4 class="mb-3 text-center">2 Size Accuracy</h4>
+              <p class="p-3 text-center">
+                Digital platforms were not thorough with providing enough
+                material to determine accurate sizing
+              </p>
+            </div>
+            <div class="col-sm-4">
+              <h4 class="mb-3 text-center">3 Clutter</h4>
+              <p class="p-3 text-center">
+                Too much text and images spread out on a page were difficult to
+                browse on
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="persona-section">
+        <div class="row">
+          <h2 class="mb-4">Persona & Problem statement</h2>
+          <p>
+            Kayla is a busy event planner who needs to do her shopping online
+            because her sporadic work schedule allows her to shop around her
+            clients' needs, whenever that may be
+          </p>
+          <div class="w-100">
+            <img
+              src="../img-ux/boutique-persona-one.jpg"
+              class="img-fluid boutique-persona-one"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="user-journey-map-section">
+        <div class="row">
+          <h2 class="mb-4">User journey map</h2>
+          <p>
+            Mapping Kayla’s journey revealed how helpful it would be for users
+            to have a clothing app that had accurate sizing and an easy checkout
+            process.
+          </p>
+          <img src="../img-ux/boutique-user-journey.jpg" />
+        </div>
+      </div>
+      <div class="paper-wireframe-section">
+        <div class="row">
+          <h2>Starting the design</h2>
+          <h3>Paper wireframes</h3>
+          <p>
+            I started drafting iterations of a homescreen page with user pain
+            points in mind. The initial designs focused on a clean landing page
+            with straightforward navigation.
+          </p>
+          <img src="../img-ux/boutique-paper-wireframe.jpeg" />
+        </div>
+      </div>
+      <div class="digital-wireframe-section">
+        <div class="row">
+          <h3>Digital wireframes</h3>
+          <p>
+            As the design phase continued, I also made iterations based on user
+            comments and concerns, and designed to make the overall user flow
+            easy to follow
+          </p>
+          <img src="../img-ux/boutique-persona.jpg" />
+        </div>
+      </div>
+      <div class="row">
+        <h3>Usability Study Findings</h3>
+        <p>Paragraph about study</p>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <h4>Round 1 Findings</h4>
+          <ul>
+            <li>Finding 1</li>
+            <li>Finding 2</li>
+            <li>Finding 3</li>
+          </ul>
+        </div>
+        <div class="col-sm-6">
+          <h4>Round 2 Findings</h4>
+          <ul>
+            <li>Finding 1</li>
+            <li>Finding 2</li>
+            <li>Finding 3</li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <h2>Refining the design</h2>
+        <h3>Mockups</h3>
+        <p>Paragraph on mockups</p>
+        <img src="../img-ux/boutique-persona.jpg" />
+      </div>
+      <div class="row">
+        <h2>Refining the design</h2>
+        <h3>Mockups 2 (after 2nd usability study)</h3>
+        <p>Paragraph on mockups</p>
+        <img src="../img-ux/boutique-persona.jpg" />
+      </div>
+      <div class="row">
+        <h3>Accessibility considerations</h3>
+        <div class="col-sm-4">
+          <h5>1. Accessibility 1</h5>
+          <p>About accessibility</p>
+        </div>
+        <div class="col-sm-4">
+          <h5>1. Accessibility 2</h5>
+          <p>About accessibility</p>
+        </div>
+        <div class="col-sm-4">
+          <h5>1. Accessibility 3</h5>
+          <p>About accessibility</p>
+        </div>
+      </div>
+      <div class="row">
+        <h3>Refined designs</h3>
+        <img src="#" />
+      </div>
+      <div class="row">
+        <h3>High-fidelity prototype</h3>
+        <p>Paragraph on hi-fi prototype</p>
+        <p>View the BoutiqueApp <a href="#">high-fidelity prototype here</a></p>
+        <img src="#" />
+      </div>
+      <div class="row">
+        <h2>Going forward</h2>
+        <h3>Takeaways</h3>
+        <div class="col-sm-6">
+          <h4>Impact</h4>
+          <p>Paragraph on impact</p>
+        </div>
+        <div class="col-sm-6">
+          <h4>What I learned</h4>
+          <p>Paragraph on what I learned</p>
+        </div>
+        <div class="row">
+          <h3>Next steps</h3>
+          <div class="col-sm-6">
+            <h4>1. Next step</h4>
+            <p>Paragraph on next step</p>
+          </div>
+          <div class="col-sm-6">
+            <h4>2. Next step</h4>
+            <p>Paragraph on next step</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
