--- a/projects/ux-three-pet.html
+++ b/projects/ux-three-pet.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UX Design Projects</title>
+    <title>PetConnect Adoption</title>
     <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -38,10 +38,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="../pages/portfolio.html"
-              ><span class="sr-only">Portfolio </span></a
-            >
+          <li class="nav-item">
+            <a class="nav-link active" href="../pages/portfolio.html"
+              >Portfolio <span class="sr-only"></span
+            ></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../pages/about.html">About</a>
@@ -52,68 +52,7 @@
         </ul>
       </div>
     </nav>
-
-    <div class="projects-category">
-      <div class="container">
-        <div class="row g-1 mb-2">
-          <div class="col-sm image">
-            <div class="app-image">
-              <a href="../projects/ux-one-boutique.html" class="ux-projects">
-                <img
-                  src="../img/boutiqueapp-mobile.png"
-                  class="ux-img img-fluid"
-                  alt="BoutiqueApp Project"
-                />
-
-                <div class="image-overlay">
-                  <div class="image-title">BoutiqueApp Project</div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-sm image">
-            <div class="app-image">
-              <a
-                href="../projects/ux-two-cook.html"
-                class="ux-projects"
-                alt="Carrots Cooking App"
-              >
-                <img src="../img/carrots-ipad.png" class="ux-img img-fluid" />
-                <div class="image-overlay">
-                  <div class="image-title-dict">PetConnect Project</div>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="row g-1">
-          <div class="col-sm image">
-            <div class="app-image">
-              <a
-                href="../projects/ux-three-pet.html"
-                class="ux-projects"
-                alt="PetConnect Pet Adoption"
-              >
-                <img
-                  src="../img/petconnect-desktop.png"
-                  class="ux-img img-fluid"
-                />
-                <div class="image-overlay">
-                  <div class="image-title-dict">
-                    Carrots Cooking App Project
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-sm image">
-            <div class="app-image">
-              <img src="../img/white-block-fill.png" class="ux-img img-fluid" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <h1>PETCONNECT APP</h1>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
