Updated BoutiqueApp CSS and added content

--- a/projects/ux-one-boutique.html
+++ b/projects/ux-one-boutique.html
@@ -144,22 +144,22 @@
         </div>
         <div class="pain-points">
           <div class="row">
-            <h2 class="mb-5">User pain points</h2>
-            <div class="col-sm-4">
+            <h2 class="mb-4">User pain points</h2>
+            <div class="col-sm-4 pain-point-individual">
               <h4 class="mb-3 text-center">1. Time</h4>
               <p class="p-3 text-center">
                 Individuals did not want to spend a large amount of time
                 commuting to stores and browsing them in-person
               </p>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 pain-point-individual">
               <h4 class="mb-3 text-center">2 Size Accuracy</h4>
               <p class="p-3 text-center">
                 Digital platforms were not thorough with providing enough
                 material to determine accurate sizing
               </p>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 pain-point-individual">
               <h4 class="mb-3 text-center">3 Clutter</h4>
               <p class="p-3 text-center">
                 Too much text and images spread out on a page were difficult to
@@ -198,7 +198,7 @@
       </div>
       <div class="paper-wireframe-section">
         <div class="row">
-          <h2>Starting the design</h2>
+          <h2 class="mb-5">Starting the design</h2>
           <h3>Paper wireframes</h3>
           <p>
             I started drafting iterations of a homescreen page with user pain
@@ -210,98 +210,220 @@
       </div>
       <div class="digital-wireframe-section">
         <div class="row">
-          <h3>Digital wireframes</h3>
-          <p>
-            As the design phase continued, I also made iterations based on user
-            comments and concerns, and designed to make the overall user flow
-            easy to follow
-          </p>
-          <img src="../img-ux/boutique-persona.jpg" />
-        </div>
-      </div>
-      <div class="row">
-        <h3>Usability Study Findings</h3>
-        <p>Paragraph about study</p>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <h4>Round 1 Findings</h4>
-          <ul>
-            <li>Finding 1</li>
-            <li>Finding 2</li>
-            <li>Finding 3</li>
-          </ul>
-        </div>
-        <div class="col-sm-6">
-          <h4>Round 2 Findings</h4>
-          <ul>
-            <li>Finding 1</li>
-            <li>Finding 2</li>
-            <li>Finding 3</li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <h2>Refining the design</h2>
-        <h3>Mockups</h3>
-        <p>Paragraph on mockups</p>
-        <img src="../img-ux/boutique-persona.jpg" />
-      </div>
-      <div class="row">
-        <h2>Refining the design</h2>
-        <h3>Mockups 2 (after 2nd usability study)</h3>
-        <p>Paragraph on mockups</p>
-        <img src="../img-ux/boutique-persona.jpg" />
-      </div>
-      <div class="row">
-        <h3>Accessibility considerations</h3>
-        <div class="col-sm-4">
-          <h5>1. Accessibility 1</h5>
-          <p>About accessibility</p>
-        </div>
-        <div class="col-sm-4">
-          <h5>1. Accessibility 2</h5>
-          <p>About accessibility</p>
-        </div>
-        <div class="col-sm-4">
-          <h5>1. Accessibility 3</h5>
-          <p>About accessibility</p>
-        </div>
-      </div>
-      <div class="row">
-        <h3>Refined designs</h3>
-        <img src="#" />
-      </div>
-      <div class="row">
-        <h3>High-fidelity prototype</h3>
-        <p>Paragraph on hi-fi prototype</p>
-        <p>View the BoutiqueApp <a href="#">high-fidelity prototype here</a></p>
-        <img src="#" />
-      </div>
-      <div class="row">
-        <h2>Going forward</h2>
-        <h3>Takeaways</h3>
-        <div class="col-sm-6">
-          <h4>Impact</h4>
-          <p>Paragraph on impact</p>
-        </div>
-        <div class="col-sm-6">
-          <h4>What I learned</h4>
-          <p>Paragraph on what I learned</p>
-        </div>
-        <div class="row">
-          <h3>Next steps</h3>
+          <h3 class="mb-4">Digital wireframes</h3>
+
           <div class="col-sm-6">
-            <h4>1. Next step</h4>
-            <p>Paragraph on next step</p>
+            <img
+              src="../img-ux/boutique-homepage-notes-two.png"
+              class="img-fluid mb-3"
+            />
+            <p class="text-center">
+              As the design phase continued, I also made iterations based on
+              user comments and concerns, and strived to make the overall user
+              flow easy to follow.
+            </p>
           </div>
           <div class="col-sm-6">
-            <h4>2. Next step</h4>
-            <p>Paragraph on next step</p>
+            <img
+              src="../img-ux/boutique-shopping-notes.png"
+              class="img-fluid mb-3"
+            />
+            <p class="text-center">
+              Organized navigation located in one place for mobile device was a
+              crucial design element for user accessibility.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="usability-study-findings">
+        <div class="row">
+          <h3 class="usability-study-title">Usability Study Findings</h3>
+          <p class="mb-4">
+            Two rounds of usability studies were conducted and helped guide
+            iterations moving forward. The first study assisted in design needs
+            from wireframes to mockups, while the second study used a
+            high-fidelity prototype and revealed what sections of the mockups
+            needed to be updated.
+          </p>
+        </div>
+        <div class="row">
+          <div class="col-sm-6 round-findings">
+            <h4 class="text-center mt-3">Round 1 Findings</h4>
+            <ul class="findings">
+              <li class="findings-line">Users want details on sizing</li>
+              <li class="findings-line">Users want a quick checkout</li>
+              <li class="findings-line">
+                Users want a noticeable account icon
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-6 round-findings">
+            <h4 class="text-center mt-3">Round 2 Findings</h4>
+            <ul class="findings">
+              <li class="findings-line">
+                The checkout button was too large and cluttered the page
+              </li>
+              <li class="findings-line">
+                The logo should be present on the "Order Placed" screen so users
+                could get back to the home page
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="refining-the-desgin">
+        <div class="row">
+          <h2 class="mb-5">Refining the design</h2>
+          <h3 class="mb-4">Mockups</h3>
+          <div class="col-sm">
+            <img
+              src="../img-ux/boutique-mockups-shopping.png"
+              class="img-fluid mb-3"
+            />
+            <p class="text-center">
+              In early designs, I spaced out items the
+              <strong>shopping cart</strong> far away from each other. After the
+              first usability study, users wanted a more concise organization of
+              shopping cart details.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="mockups">
+        <div class="row">
+          <h3 class="mb-4">Mockups 2 (after 2nd usability study)</h3>
+          <div class="col-sm">
+            <img
+              src="../img-ux/boutique-mockups-two.png"
+              class="img-fluid mb-3"
+            />
+            <p class="text-center">
+              The second usability study revealed confusion when the
+              <strong>"Add to Favorites"</strong> button was hit on an item
+              page, there was no indication that action was complete, so I added
+              a <strong>pop-up notification</strong> confirming the action.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="accessibility-section">
+        <div class="row">
+          <h3 class="mb-5">Accessibility considerations</h3>
+          <div class="col-sm-4 accessibility-point">
+            <h5>WCAG</h5>
+            <p>
+              WCAG contrast between text and color were cross-checked to ensure
+              readability
+            </p>
+          </div>
+          <div class="col-sm-4 accessibility-point">
+            <h5>Labeled icons</h5>
+            <p>
+              Icons with small labels beneath (e.g. Account icon) were used to
+              ensure it's function is clear
+            </p>
+          </div>
+          <div class="col-sm-4 accessibility-point">
+            <h5>Buttons</h5>
+            <p>
+              Large, bold call-to-action buttons were used to grab users'
+              attention
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="refined-designs-section">
+        <div class="row">
+          <h3 class="mb-3">Refined designs</h3>
+          <img src="../img-ux/boutique-hifi-designs.png" class="img=fluid" />
+        </div>
+      </div>
+      <div class="hifi-protorype">
+        <div class="row">
+          <h3 class="mb-3">High-fidelity prototype</h3>
+          <p>
+            The final high-fidelity prototype is a lot cleaner and simpler for
+            users to browse items, add to cart, and checkout.
+          </p>
+          <p class="mb-4">
+            View the BoutiqueApp
+            <a
+              href="https://www.figma.com/proto/NJKmzMeT5SGWz8wb3FrZCT/UPDATED-BoutiqueApp-Wireframe%2FPrototype-(Copy)?node-id=208%3A4&scaling=scale-down&page-id=208%3A2&starting-point-node-id=208%3A4"
+              target="_blank"
+              >high-fidelity prototype here</a
+            >
+          </p>
+          <img src="../img-ux/boutique-hifi-prototype.png" class="img-fluid" />
+        </div>
+      </div>
+      <div class="end-section">
+        <h2 class="going-forward">Going forward</h2>
+        <div class="takeaways">
+          <div class="row">
+            <h3>Takeaways</h3>
+            <div class="col-sm-6 takeaway-paragraph">
+              <h4>Impact</h4>
+              <p>
+                The app allows individuals to feel comfortable in purchasing
+                items that will fit well, and confident that the store is
+                thorough in sharing item details.
+              </p>
+              <p>
+                One quote from peer feedback:
+                <br />
+                <em
+                  >“The app made it easy for me to shop online! I’m confident
+                  that what will arrive at my doorstep is something I won’t have
+                  to return later in-store.”</em
+                >
+              </p>
+            </div>
+            <div class="col-sm-6 takeaway-paragraph">
+              <h4>What I learned</h4>
+              <p>
+                I’ve learned to keep design elements simple. The layout and
+                call-to-action buttons should be clear and clean for a user to
+                press buttons with minimal confusion.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="next-steps">
+          <div class="row">
+            <h3>Next steps</h3>
+            <div class="col-sm-6 takeaway-paragraph">
+              <h4>1. Testing</h4>
+              <p>
+                Conduct an unmoderated usability study to find out if there are
+                any bugs or pain points in the design
+              </p>
+            </div>
+            <div class="col-sm-6 takeaway-paragraph">
+              <h4>2. User Research</h4>
+              <p>
+                Conduct more user research to determine if any new features or
+                design updates should be implemented
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    <footer class="footer-all">
+      <div class="container text-center">
+        <span class="footer-link">
+          <a href="../projects/ux-one-boutique.html" class="active"
+            >BoutiqueApp</a
+          >
+        </span>
+        <span class="footer-link">
+          <a href="../projects/ux-two-cook.html">Carrots' Cooking App</a>
+        </span>
+        <span class="footer-link">
+          <a href="../projects/ux-three-pet.html">PetConnect Adoption</a>
+        </span>
+      </div>
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
