Updated image on title page

--- a/projects/ux-one-boutique.html
+++ b/projects/ux-one-boutique.html
@@ -63,7 +63,7 @@
         </div>
         <div class="col-sm-6">
           <img
-            src="../img/boutiqueapp-mobile.png"
+            src="../img-ux/boutique-title-img.png"
             class="img-fluid title-img"
           />
         </div>
