Added content to Carrots page

--- a/projects/ux-one-boutique.html
+++ b/projects/ux-one-boutique.html
@@ -40,8 +40,8 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" href="../pages/portfolio.html"
-              >Portfolio <span class="sr-only"></span
-            ></a>
+              ><span class="sr-only">Portfolio </span></a
+            >
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../pages/about.html">About</a>
@@ -310,22 +310,22 @@
         <div class="row">
           <h3 class="mb-5">Accessibility considerations</h3>
           <div class="col-sm-4 accessibility-point">
-            <h5>WCAG</h5>
-            <p>
+            <h5 class="text-center">WCAG</h5>
+            <p class="p-3 text-center">
               WCAG contrast between text and color were cross-checked to ensure
               readability
             </p>
           </div>
           <div class="col-sm-4 accessibility-point">
-            <h5>Labeled icons</h5>
-            <p>
+            <h5 class="text-center">Labeled icons</h5>
+            <p class="p-3 text-center">
               Icons with small labels beneath (e.g. Account icon) were used to
               ensure it's function is clear
             </p>
           </div>
           <div class="col-sm-4 accessibility-point">
-            <h5>Buttons</h5>
-            <p>
+            <h5 class="text-center">Buttons</h5>
+            <p class="p-3 text-center">
               Large, bold call-to-action buttons were used to grab users'
               attention
             </p>
@@ -422,6 +422,18 @@
         <span class="footer-link">
           <a href="../projects/ux-three-pet.html">PetConnect Adoption</a>
         </span>
+      </div>
+    </footer>
+    <footer class="footer-code">
+      <div class="text-center">
+        This page is
+        <a
+          href="https://github.com/odadki/my-portfolio-js-2022"
+          target="_blank"
+          class="footer-code-link"
+          >open-sourced</a
+        >
+        and coded by: Danielle Oda
       </div>
     </footer>
 
