--- a/projects/ux-two-cook.html
+++ b/projects/ux-two-cook.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../style-ux.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -40,8 +40,8 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" href="../pages/portfolio.html"
-              >Portfolio <span class="sr-only"></span
-            ></a>
+              ><span class="sr-only">Portfolio </span></a
+            >
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../pages/about.html">About</a>
@@ -52,7 +52,394 @@
         </ul>
       </div>
     </nav>
-    <h1>CARROTS COOKING APP</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="title-text">
+            <h3 class="title-info">Case Study:</h3>
+            <h1 class="title-info">Carrots</h1>
+            <p class="title-info">A cooking app for kids</p>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <img
+            src="../img-ux/carrots-title-img.png"
+            class="img-fluid carrots-title-img"
+          />
+        </div>
+      </div>
+      <div class="project-overview-section">
+        <div class="row">
+          <h2 class="project-overview-title">Project Overview</h2>
+          <div class="col-sm-4">
+            <div class="p-3">
+              <h4>The problem</h4>
+              <p>
+                There is a lack of user-friendly cooking content and recipes for
+                kids and teenagers to use. Food websites and apps currently on
+                the market have long, wordy content where users have to dig to
+                get information on groceries, “how-to” videos and info on
+                allergens.
+              </p>
+            </div>
+            <div class="p-3 project-overview-goal">
+              <h4>The goal</h4>
+              <p>
+                Design a one-stop cooking app for kids to fulfill all their
+                cooking needs. The app will contain verbiage that is easy to
+                understand & user-friendly, while offering important features,
+                like: an allergen list, timer, music playlist, a grocery list
+                and more.
+              </p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="p-3">
+              <h4>The product</h4>
+              <p>
+                Carrots is an app focusing on providing healthy & easy recipes
+                for kids. The app and web-browser also provide a one-stop hub
+                for access to all things cooking: grocery list, cooking tips,
+                videos and more to make it convenient for kids to prep and cook
+                in an organized manner. Carrots’ primary user include kids aged
+                from 10+, who enjoy cooking individually or with a parent.
+              </p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="p-3">
+              <h4>My role</h4>
+              <p>
+                UX designer leading the dedicated mobile app and web design
+                across multiple platforms, from conception to delivery
+              </p>
+            </div>
+            <div class="p-3">
+              <h4>Responsibilities</h4>
+              <p>
+                Conducting interviews, paper and digital wireframing, low and
+                high-fidelity prototyping, conducting usability studies,
+                consideration of accessibility needs, iterating on designs,
+                determining the app’s information architecture, and creating a
+                responsive design.
+              </p>
+            </div>
+            <div class="p-3">
+              <h4>Project duration</h4>
+              <p>February 2022 - March 2022</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="understand-user-section">
+        <div class="row">
+          <div class="col-sm">
+            <h2 class="understand-user-title">Understanding the user</h2>
+            <p>
+              I used Carrots’ data on cooking apps and observations gained from
+              my competitive audit to develop interview questions. During the
+              user interviews, most participants were frustrated with the lack
+              of user-friendly sites that kids could use; they didn’t want a
+              food service to just deliver pre-made meals, but wanted their kids
+              to be able to learn to cook and have fun doing so. Their feedback
+              of wanting simple features surrounding all aspects of cooking made
+              it clear what Carrots’ content and design would aim for.
+            </p>
+          </div>
+        </div>
+        <div class="pain-points">
+          <div class="row">
+            <h2 class="mb-4">User pain points</h2>
+            <div class="col-sm-4 pain-point-individual">
+              <h4 class="mb-3 text-center">1. Lack of Media</h4>
+              <p class="p-3 text-center">
+                Recipes often did not include enough photo and video content to
+                aide the step-by-step instruction
+              </p>
+            </div>
+            <div class="col-sm-4 pain-point-individual">
+              <h4 class="mb-3 text-center">2 Gap in kids' age</h4>
+              <p class="p-3 text-center">
+                Platforms catered too closely to either kids aged 7-12, missing
+                the target in intermediate, high school, and college-level
+                students
+              </p>
+            </div>
+            <div class="col-sm-4 pain-point-individual">
+              <h4 class="mb-3 text-center">3 Clutter</h4>
+              <p class="p-3 text-center">
+                Sites spoke too much of the history of the food, without
+                offering concise instructions on how to prepare them
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="persona-section">
+        <div class="row">
+          <h2 class="mb-4">Persona & Problem statement</h2>
+          <p>
+            Royce Chen is a middle-school student who enjoys cooking, who needs
+            to access healthy recipes with quick & easy step-by-step
+            instructions with lots of pictures and videos because he’d like to
+            make them on his own for his family.
+          </p>
+          <div class="w-100">
+            <img
+              src="../img-ux/carrots-persona.jpg"
+              class="img-fluid boutique-persona-one"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="user-journey-map-section">
+        <div class="row">
+          <h2 class="mb-4">User journey map</h2>
+          <p>
+            Mapping Royce's journey revealed how helpful it would be to have
+            images and videos for each step, as well as providing cues on the
+            approximate cook time.
+          </p>
+          <img src="../img-ux/carrots-user-journey.jpg" />
+        </div>
+      </div>
+      <div class="paper-wireframe-section">
+        <div class="row">
+          <h2 class="mb-5">Starting the design</h2>
+          <h3>Paper wireframes</h3>
+          <p>
+            I used a quick ideation process to sketch ideas for a dedicated
+            mobile app. My focus was kept on creating a simple app, while
+            keeping in mind all the features (and lack thereof) from the
+            competitive audit to include in the design.
+          </p>
+          <img src="../img-ux/carrots-paper-wireframe.jpg" />
+        </div>
+      </div>
+      <div class="digital-wireframe-section">
+        <div class="row">
+          <h3 class="mb-4">Digital wireframes</h3>
+
+          <div class="col-sm-6">
+            <img
+              src="../img-ux/carrots-mobile-wireframe-homepage.png"
+              class="img-fluid mb-3"
+            />
+            <p class="text-center">
+              After sketching many different ideas for the home page, I decided
+              on a design with big, bold images to keep users engaged with the
+              app.
+            </p>
+          </div>
+          <div class="col-sm-6">
+            <img
+              src="../img-ux/carrots-mobile-wireframe-recipe.png"
+              class="img-fluid mb-3"
+            />
+            <p class="text-center">
+              The icons at the top of the app allow for users to understand very
+              quickly what the recipe entails. The additional "share" and
+              "favorite" icon are present to allow users to access them for
+              later use.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="usability-study-findings">
+        <div class="row">
+          <h3 class="usability-study-title">Usability Study Findings</h3>
+          <p class="mb-4">
+            The usability study directed the design needs from wireframes to
+            mockups, and provided a lot of insight of what users wanted to see
+            in a cooking app.
+          </p>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 round-findings">
+            <h4 class="text-center mt-3">1. Features</h4>
+            <p class="p-4 text-center">
+              Users liked that this app had everything they needed for cooking
+            </p>
+          </div>
+          <div class="col-sm-4 round-findings">
+            <h4 class="text-center mt-3">2. Back to Home</h4>
+            <p class="p-4 text-center">
+              Users found that the "Back to Home" button at the bottom of the
+              Recipes page should be applied to all pages
+            </p>
+          </div>
+          <div class="col-sm-4 round-findings">
+            <h4 class="text-center mt-3">3. Recipes Page</h4>
+            <p class="p-4 text-center">
+              Users found that the end of the "Selected Recipe" page was too
+              abrupt and were confused on where to go at the end
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="refining-the-desgin">
+        <div class="row">
+          <h2 class="mb-5">Refining the design</h2>
+          <h3 class="mb-4">Mockups</h3>
+          <div class="col-sm">
+            <img src="../img-ux/carrots-mockup.png" class="img-fluid mb-3" />
+            <p class="text-center">
+              Users were confused to find no way to view the recipe displayed
+              here and thought it would be helpful to include a
+              <strong>“View Recipe”</strong>
+              button for each recipe. This idea was implemented in the
+              high-fidelity design.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="mockups">
+        <div class="row">
+          <div class="col-sm">
+            <img
+              src="../img-ux/carrots-mockup-two.png"
+              class="img-fluid mb-3"
+            />
+            <p class="text-center">
+              Originally, I had the category of time grouped in with the rest of
+              the types of cuisine, which users overlooked and expressed wanting
+              a more definitive space for timed meals. In the second mockup, I
+              included a separate space for this.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="accessibility-section">
+        <div class="row">
+          <h3 class="mb-5">Accessibility considerations</h3>
+          <div class="col-sm-4 accessibility-point">
+            <h5 class="text-center">WCAG</h5>
+            <p class="p-3 text-center">
+              WCAG contrast between text and color were cross-checked to ensure
+              readability
+            </p>
+          </div>
+          <div class="col-sm-4 accessibility-point">
+            <h5 class="text-center">Text-to-Speak</h5>
+            <p class="p-3 text-center">
+              Implemented an “Accessibility” section in the “My Account” tab for
+              users to select “Select to Speak” or “TalkBack” options
+            </p>
+          </div>
+          <div class="col-sm-4 accessibility-point">
+            <h5 class="text-center">Buttons</h5>
+            <p class="p-3 text-center">
+              Large, bold call-to-action buttons were used to grab users'
+              attention
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="refined-designs-section">
+        <div class="row">
+          <h3 class="mb-3">Refined designs</h3>
+          <img src="../img-ux/boutique-hifi-designs.png" class="img=fluid" />
+        </div>
+      </div>
+      <div class="hifi-protorype">
+        <div class="row">
+          <h3 class="mb-3">High-fidelity prototype</h3>
+          <p>
+            The final high-fidelity prototype is a lot cleaner and simpler for
+            users to browse items, add to cart, and checkout.
+          </p>
+          <p class="mb-4">
+            View the BoutiqueApp
+            <a
+              href="https://www.figma.com/proto/NJKmzMeT5SGWz8wb3FrZCT/UPDATED-BoutiqueApp-Wireframe%2FPrototype-(Copy)?node-id=208%3A4&scaling=scale-down&page-id=208%3A2&starting-point-node-id=208%3A4"
+              target="_blank"
+              >high-fidelity prototype here</a
+            >
+          </p>
+          <img src="../img-ux/boutique-hifi-prototype.png" class="img-fluid" />
+        </div>
+      </div>
+      <div class="end-section">
+        <h2 class="going-forward">Going forward</h2>
+        <div class="takeaways">
+          <div class="row">
+            <h3>Takeaways</h3>
+            <div class="col-sm-6 takeaway-paragraph">
+              <h4>Impact</h4>
+              <p>
+                The app allows individuals to feel comfortable in purchasing
+                items that will fit well, and confident that the store is
+                thorough in sharing item details.
+              </p>
+              <p>
+                One quote from peer feedback:
+                <br />
+                <em
+                  >“The app made it easy for me to shop online! I’m confident
+                  that what will arrive at my doorstep is something I won’t have
+                  to return later in-store.”</em
+                >
+              </p>
+            </div>
+            <div class="col-sm-6 takeaway-paragraph">
+              <h4>What I learned</h4>
+              <p>
+                I’ve learned to keep design elements simple. The layout and
+                call-to-action buttons should be clear and clean for a user to
+                press buttons with minimal confusion.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="next-steps">
+          <div class="row">
+            <h3>Next steps</h3>
+            <div class="col-sm-6 takeaway-paragraph">
+              <h4>1. Testing</h4>
+              <p>
+                Conduct an unmoderated usability study to find out if there are
+                any bugs or pain points in the design
+              </p>
+            </div>
+            <div class="col-sm-6 takeaway-paragraph">
+              <h4>2. User Research</h4>
+              <p>
+                Conduct more user research to determine if any new features or
+                design updates should be implemented
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer-all">
+      <div class="container text-center">
+        <span class="footer-link">
+          <a href="../projects/ux-one-boutique.html" class="active"
+            >BoutiqueApp</a
+          >
+        </span>
+        <span class="footer-link">
+          <a href="../projects/ux-two-cook.html">Carrots' Cooking App</a>
+        </span>
+        <span class="footer-link">
+          <a href="../projects/ux-three-pet.html">PetConnect Adoption</a>
+        </span>
+      </div>
+    </footer>
+    <footer class="footer-code">
+      <div class="text-center">
+        This page is
+        <a
+          href="https://github.com/odadki/my-portfolio-js-2022"
+          target="_blank"
+          class="footer-code-link"
+          >open-sourced</a
+        >
+        and coded by: Danielle Oda
+      </div>
+    </footer>
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
