Completed content for Carrots project

--- a/projects/ux-one-boutique.html
+++ b/projects/ux-one-boutique.html
@@ -338,7 +338,7 @@
           <img src="../img-ux/boutique-hifi-designs.png" class="img=fluid" />
         </div>
       </div>
-      <div class="hifi-protorype">
+      <div class="hifi-prototype">
         <div class="row">
           <h3 class="mb-3">High-fidelity prototype</h3>
           <p>
