--- a/projects/ux-two-cook.html
+++ b/projects/ux-two-cook.html
@@ -338,10 +338,10 @@
       <div class="refined-designs-section">
         <div class="row">
           <h3 class="mb-3">Refined designs</h3>
-          <img src="../img-ux/boutique-hifi-designs.png" class="img=fluid" />
+          <img src="../img-ux/carrots-refined-designs.png" class="img=fluid" />
         </div>
       </div>
-      <div class="hifi-protorype">
+      <div class="hifi-prototype">
         <div class="row">
           <h3 class="mb-3">High-fidelity prototype</h3>
           <p>
@@ -349,14 +349,76 @@
             users to browse items, add to cart, and checkout.
           </p>
           <p class="mb-4">
-            View the BoutiqueApp
+            View the Carrots Cooking App
             <a
-              href="https://www.figma.com/proto/NJKmzMeT5SGWz8wb3FrZCT/UPDATED-BoutiqueApp-Wireframe%2FPrototype-(Copy)?node-id=208%3A4&scaling=scale-down&page-id=208%3A2&starting-point-node-id=208%3A4"
+              href="https://www.figma.com/proto/TGtIruqMUFel11S30ywSAC/Course-7---Project-3?node-id=52%3A2278&scaling=scale-down&page-id=0%3A1&starting-point-node-id=47%3A1059"
               target="_blank"
               >high-fidelity prototype here</a
             >
           </p>
-          <img src="../img-ux/boutique-hifi-prototype.png" class="img-fluid" />
+          <img src="../img-ux/carrots-hifi-prototype.png" class="img-fluid" />
+        </div>
+      </div>
+      <div class="responsive-design">
+        <div class="row">
+          <h2 class="mb-4">Responsive Design</h2>
+          <h3 class="mb-3">Sitemap</h3>
+          <p>
+            I used the original dedicated mobile app structure to help guide the
+            sitemap for the website application. The structure generally
+            remained the same, but I further compiled the child tabs to fit
+            under parent tabs in broader categories, for a clean look. (IA from
+            the mobile device remained similar for a tablet application).
+          </p>
+
+          <img src="../img-ux/carrots-sitemap.png" class="img-fluid mb-5" />
+        </div>
+        <div class="row">
+          <h3 class="mb-3">Responsive designs</h3>
+          <p>
+            Although I had more space to play with for the tablet and desktop
+            designs, I wanted to keep negative space around it so images, text
+            and recipes were easy to read and view.
+          </p>
+          <div class="row justify-content-evenly">
+            <div class="col-sm-4 mt-4 carrots-slide-mobile">
+              <p class="text-center">Mobile</p>
+              <img
+                src="../img-ux/carrots-slide-mobile.png"
+                class="img-fluid slide-shadow"
+              />
+            </div>
+            <div class="col-sm-4 mt-4 carrots-slide-tablet">
+              <p class="text-center">Tablet</p>
+              <img
+                src="../img-ux/carrots-slide-tablet.png"
+                class="img-fluid slide-shadow"
+              />
+              <p class="text-center mt-4">
+                See tablet prototype
+                <a
+                  href="https://www.figma.com/proto/TGtIruqMUFel11S30ywSAC/Course-7---Project-3?node-id=75%3A4949&scaling=scale-down&page-id=0%3A1&starting-point-node-id=73%3A3715&show-proto-sidebar=1"
+                  target="_blank"
+                  >here</a
+                >
+              </p>
+            </div>
+            <div class="col-sm-4 mt-4 carrots-slide-laptop">
+              <p class="text-center">Laptop</p>
+              <img
+                src="../img-ux/carrots-slide-desktop.png"
+                class="img-fluid slide-shadow"
+              />
+              <p class="text-center mt-4">
+                See laptop prototype
+                <a
+                  href="https://www.figma.com/proto/TGtIruqMUFel11S30ywSAC/Course-7---Project-3?node-id=74%3A3879&scaling=scale-down&page-id=0%3A1&starting-point-node-id=74%3A3879&show-proto-sidebar=1"
+                  target="_blank"
+                  >here</a
+                >
+              </p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="end-section">
@@ -367,26 +429,20 @@
             <div class="col-sm-6 takeaway-paragraph">
               <h4>Impact</h4>
               <p>
-                The app allows individuals to feel comfortable in purchasing
-                items that will fit well, and confident that the store is
-                thorough in sharing item details.
-              </p>
-              <p>
-                One quote from peer feedback:
-                <br />
-                <em
-                  >“The app made it easy for me to shop online! I’m confident
-                  that what will arrive at my doorstep is something I won’t have
-                  to return later in-store.”</em
-                >
+                Users shared that a cooking app geared for kids helped keep them
+                stay engaged & interested, allowed them to learn about cooking
+                more in-depth, and kept it all fun! The innovative features also
+                saved users time with grocery shopping.
               </p>
             </div>
             <div class="col-sm-6 takeaway-paragraph">
               <h4>What I learned</h4>
               <p>
-                I’ve learned to keep design elements simple. The layout and
-                call-to-action buttons should be clear and clean for a user to
-                press buttons with minimal confusion.
+                I learned that even though the app was geared toward kids,
+                adults also enjoyed using it. The goal was to keep it all
+                user-friendly and easy for kids to use, but the benefit extended
+                beyond kids in that way; I learned that if you create a great
+                app, it extends beyond its core purpose.
               </p>
             </div>
           </div>
@@ -394,18 +450,24 @@
         <div class="next-steps">
           <div class="row">
             <h3>Next steps</h3>
-            <div class="col-sm-6 takeaway-paragraph">
-              <h4>1. Testing</h4>
+            <div class="col-sm-4 takeaway-paragraph">
+              <h4>1. Survey</h4>
               <p>
-                Conduct an unmoderated usability study to find out if there are
-                any bugs or pain points in the design
+                Follow-up survey on user experience & flow for all platforms
               </p>
             </div>
-            <div class="col-sm-6 takeaway-paragraph">
-              <h4>2. User Research</h4>
+            <div class="col-sm-4 takeaway-paragraph">
+              <h4>2. Features</h4>
               <p>
-                Conduct more user research to determine if any new features or
-                design updates should be implemented
+                Add more features to keep the app’s interest and maintain
+                positive user experience
+              </p>
+            </div>
+            <div class="col-sm-4 takeaway-paragraph">
+              <h4>2. Incentives</h4>
+              <p>
+                Include incentives (like grocery coupons) to keep users wanting
+                to cook (and use the app)
               </p>
             </div>
           </div>
@@ -415,12 +477,12 @@
     <footer class="footer-all">
       <div class="container text-center">
         <span class="footer-link">
-          <a href="../projects/ux-one-boutique.html" class="active"
-            >BoutiqueApp</a
-          >
+          <a href="../projects/ux-one-boutique.html">BoutiqueApp</a>
         </span>
         <span class="footer-link">
-          <a href="../projects/ux-two-cook.html">Carrots' Cooking App</a>
+          <a href="../projects/ux-two-cook.html" class="active"
+            >Carrots' Cooking App</a
+          >
         </span>
         <span class="footer-link">
           <a href="../projects/ux-three-pet.html">PetConnect Adoption</a>
