Finished PetConnect page

--- a/projects/ux-one-boutique.html
+++ b/projects/ux-one-boutique.html
@@ -153,14 +153,14 @@
               </p>
             </div>
             <div class="col-sm-4 pain-point-individual">
-              <h4 class="mb-3 text-center">2 Size Accuracy</h4>
+              <h4 class="mb-3 text-center">2. Size Accuracy</h4>
               <p class="p-3 text-center">
                 Digital platforms were not thorough with providing enough
                 material to determine accurate sizing
               </p>
             </div>
             <div class="col-sm-4 pain-point-individual">
-              <h4 class="mb-3 text-center">3 Clutter</h4>
+              <h4 class="mb-3 text-center">3. Clutter</h4>
               <p class="p-3 text-center">
                 Too much text and images spread out on a page were difficult to
                 browse on
