--- a/projects/ux-projects.html
+++ b/projects/ux-projects.html
@@ -52,7 +52,6 @@
         </ul>
       </div>
     </nav>
-
     <div class="projects-category">
       <div class="container">
         <div class="row g-1 mb-2">
@@ -80,7 +79,7 @@
               >
                 <img src="../img/carrots-ipad.png" class="ux-img img-fluid" />
                 <div class="image-overlay">
-                  <div class="image-title-dict">PetConnect Project</div>
+                  <div class="image-title-dict">Carrots Cooking App</div>
                 </div>
               </a>
             </div>
@@ -99,9 +98,7 @@
                   class="ux-img img-fluid"
                 />
                 <div class="image-overlay">
-                  <div class="image-title-dict">
-                    Carrots Cooking App Project
-                  </div>
+                  <div class="image-title-dict">PetConnect Adoption App</div>
                 </div>
               </a>
             </div>
