--- a/projects/ux-two-cook.html
+++ b/projects/ux-two-cook.html
@@ -158,7 +158,7 @@
               </p>
             </div>
             <div class="col-sm-4 pain-point-individual">
-              <h4 class="mb-3 text-center">2 Gap in kids' age</h4>
+              <h4 class="mb-3 text-center">2. Gap in kids' age</h4>
               <p class="p-3 text-center">
                 Platforms catered too closely to either kids aged 7-12, missing
                 the target in intermediate, high school, and college-level
@@ -166,7 +166,7 @@
               </p>
             </div>
             <div class="col-sm-4 pain-point-individual">
-              <h4 class="mb-3 text-center">3 Clutter</h4>
+              <h4 class="mb-3 text-center">3. Clutter</h4>
               <p class="p-3 text-center">
                 Sites spoke too much of the history of the food, without
                 offering concise instructions on how to prepare them
