--- a/projects/frontend-projects.html
+++ b/projects/frontend-projects.html
@@ -4,9 +4,111 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Front-End Projects</title>
   </head>
   <body>
-    Hello from Front-End Projects
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Front-End Design Projects</title>
+        <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+          href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Sulphur+Point:wght@300;400&display=swap"
+          rel="stylesheet"
+        />
+
+        <link
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous"
+        />
+
+        <link rel="stylesheet" href="../style.css" />
+      </head>
+      <body>
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <a class="navbar-brand" href="/">Danielle Oda</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="../pages/portfolio.html"
+                  ><span class="sr-only">Portfolio </span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <div class="projects-category">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-6 image">
+                <a href="../projects/ux-projects.html" class="ux-projects">
+                  <img
+                    src="../img/weather-img.png"
+                    class="portfolio-img carrots-img img-fluid"
+                    alt="Carrots Cooking App"
+                  />
+                  <div class="image-overlay">
+                    <div class="image-title">Weather App</div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-sm-6 image">
+                <a
+                  href="../projects/frontend-projects.html"
+                  class="frontend-projects"
+                >
+                  <img
+                    src="../img/dictionary-img.png"
+                    class="portfolio-img dictionary-img img-fluid"
+                  />
+                  <div class="image-overlay-dict">
+                    <div class="image-title-dict">Dictionary App</div>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <script
+          src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+          integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+          crossorigin="anonymous"
+        ></script>
+        <script
+          src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+          integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+          crossorigin="anonymous"
+        ></script>
+        <script
+          src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+          integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+          crossorigin="anonymous"
+        ></script>
+      </body>
+    </html>
   </body>
 </html>
